--- a/ex.html
+++ b/ex.html
@@ -11,6 +11,7 @@
                 <li>chess</li>
                 <li>Reading</li>
                 <li>Learning</li>
+                <li>Teaching</li>
             </ul>
             <h3>Favorite Quotes</h3>
             <blockquote>here is a favorite quote of mine...</blockquote>
