--- a/ex.html
+++ b/ex.html
@@ -12,6 +12,7 @@
                 <li>Reading</li>
                 <li>Learning</li>
                 <li>Teaching</li>
+                <li>studying</li>
             </ul>
             <h3>Favorite Quotes</h3>
             <blockquote>here is a favorite quote of mine...</blockquote>
