--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-<div>
-<head><h1>My First Website</h1></head>
-<link rel="stylesheet" href="stylee.css"/>
-<body>
- 
-<p>Welcome to my website! Here are some things I enjoy</p>
-<ul>
-<li>Web Development</li>
-<li>chess</li>
-<li>Reading</li>
-<li>Learning</li>
-<li>teaching</li>
-</ul>
-<h3>Favorite Quotes</h3>
-<blockquote>here is a favorite quote of mine...</blockquote>
-<blockquote>...and another</blockquote>
-</div>
-</body>
+    <head><h1>My First Website</h1></head>
+    <link rel="stylesheet" href="stylee.css"/>
+    <!-- <meta -->
+    <body>
+        <div>
+            <p>Welcome to my website! Here are some things I enjoy</p>
+            <ul>
+                <li>Web Development</li>
+                <li>chess</li>
+                <li>Reading</li>
+                <li>Learning</li>
+                <li>Teaching</li>
+                <li>studying</li>
+            </ul>
+            <h3>Favorite Quotes</h3>
+            <blockquote>here is a favorite quote of mine...</blockquote>
+            <blockquote>...and another</blockquote>
+        </div>
+    </body>
 </html>
