my first commit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li>Learning</li>
                 <li>Teaching</li>
                 <li>studying</li>
+                <li>dancing</li>
             </ul>
             <h3>Favorite Quotes</h3>
             <blockquote>here is a favorite quote of mine...</blockquote>
