--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><h1>My First Website</h1></head>
+    <head><h1> First Website</h1></head>
     <link rel="stylesheet" href="stylee.css"/>
     <!-- <meta -->
     <body>
