--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <ul>
                 <li>Web Development</li>
                 <li>chess</li>
-                <li>Reading</li>
+                <li>Reading novels</li>
                 <li>Learning</li>
                 <li>Teaching</li>
                 <li>studying</li>
