--- a/ass1/websites.html
+++ b/ass1/websites.html
@@ -3,9 +3,9 @@
 <head>
   <title>assignment.com</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="css/960_12_col.css" />
-  <link rel="stylesheet" href="css/text.css" />
-  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="960_12_col.css" />
+  <link rel="stylesheet" href="text.css" />
+
 
 
 
@@ -36,114 +36,136 @@
       <a href="#">contact</a>
     </div>
   </aside><br><br>
-  <div class="hero-image"></div>
+  <div class="hero-image"></div><br></br>
+  <div class="container_12">
+    <div class="main clearfix">
+      <div class="grid_4">
 
 
 
-  <div class="row">
-    <div class="col-sm-4">
 
-      <a href="engineer.html"><img src="eng.jpg" class="image-circle" width="350px" height="150px" alt="Image"></a>
+
+        <section>
+
+          <a href="engineer.html"><img src="eng.jpg" class="image-circle" width="350px" height="150px" alt="Image"></a>
+        </section>
+      </div>
+      <div class="grid_4">
+        <section>
+
+          <a href="medicall.html"><img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTl3a4L8fIJyFEhxX3M-c0beHF7voEebaXQDRn3DMt4kc82hMmegQ"
+              width="350" height="150px" alt="Image"></a>
+        </section>
+      </div>
+
+      <div class="grid_4">
+        <section>
+
+
+          <a href="mba.html"><img src="mba.jpg" width="350px" height="150px" alt="Image"></a>
+        </section>
+      </div>
     </div>
-    <div class="col-sm-4">
-
-      <a href="medicall.html"><img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTl3a4L8fIJyFEhxX3M-c0beHF7voEebaXQDRn3DMt4kc82hMmegQ"
-          width="350" height="150px" alt="Image"></a>
-    </div>
-    <div class="col-sm-4">
-
-      <a href="mba.html"><img src="mba.jpg" width="350px" height="150px" alt="Image"></a>
-    </div>
-
   </div>
   </div><br></br>
-  <div class="row">
-
-    <div class="column" style="background-color:white;">
-      <center>
-        <h1 style="color:blue"><b>ENGINEERING</b></h1><br>
-        -----------------------------------------------------------------------------------<br>
-        <ul>
-          <h4>
-            <font color="black">
+  <div class="container_12">
+    <div class="main clearfix">
+      <div class="grid_4">
+        <section>
 
 
-              <li>Automobile Engineering…</li>
-              <li>Civil Engineering </li>
 
-              <li>Computer Science & Engineering </li>
+          <center>
+            <h1 style="color:blue"><b>ENGINEERING</b></h1><br>
+            -----------------------------------------------------------------------------------<br>
+            <ul>
+              <h4>
+                <font color="black">
 
-              <li>Electrical & Electronic Engineering</li>
 
-              <li>Electronics & Comm. Engineering </li>
+                  <li>Automobile Engineering…</li>
+                  <li>Civil Engineering </li>
 
-              <li>Mechanical Engineering </li>
+                  <li>Computer Science & Engineering </li>
 
-              <li>Mining Engineering</li>
-              <li>Petroleum</li>
-          </h4>
-          </font>
-        </ul>
-      </center>
+                  <li>Electrical & Electronic Engineering</li>
+
+                  <li>Electronics & Comm. Engineering </li>
+
+                  <li>Mechanical Engineering </li>
+
+                  <li>Mining Engineering</li>
+                  <li>Petroleum</li>
+              </h4>
+              </font>
+            </ul>
+          </center>
+        </section>
+      </div>
+      <div class="grid_4">
+        <section>
+
+          <center>
+            <h1 style="color:blue">MEDICAL</h1><br>
+            ------------------------------------------------------------------------------------<br>
+            <ul>
+              <h4>
+                <font color="black">
+
+                  <li> Medical Assistant. ...</li>
+                  <li> Nursing Assistant. ...</li>
+                  <li> Home Health Aide. ...</li>
+                  <li>Licensed Practical Nurse. ...</li>
+                  <li> Physician. ...</li>
+                  <li>Therapist. ...</li>
+                  <li>Registered Nurse. ...</li>
+                  <li>Pharmacy Technician.</li>
+                </font>
+              </h4>
+            </ul>
+          </center>
+        </section>
+      </div>
+      <div class="grid_4">
+        <section>
+          <center>
+            <h1 style="color:blue">MBA</h1><br>
+            ------------------------------------------------------------------------------------<br>
+          </center>
+
+          <ul>
+            <center>
+              <font color="black">
+                <h4>
+                  <li>Department Profile</li>
+
+
+
+                  <li>Vision</li>
+
+
+                  <li>Short Term Goals</li>
+
+                  <li>Strengths</li>
+
+                  <li>Teaching Lerning Initiatives</li>
+
+                  <li>Educational Objectives</li>
+                </h4>
+              </font>
+            </center>
+          </ul>
+        </section>
+      </div>
     </div>
-    <div class="column" style="background-color:white;">
-      <center>
-        <h1 style="color:blue">MEDICAL</h1><br>
-        ------------------------------------------------------------------------------------<br>
-        <ul>
-          <h4>
-            <font color="black">
 
-              <li> Medical Assistant. ...</li>
-              <li> Nursing Assistant. ...</li>
-              <li> Home Health Aide. ...</li>
-              <li>Licensed Practical Nurse. ...</li>
-              <li> Physician. ...</li>
-              <li>Therapist. ...</li>
-              <li>Registered Nurse. ...</li>
-              <li>Pharmacy Technician.</li>
-            </font>
-          </h4>
-        </ul>
-      </center>
-    </div>
-    <div class="column" style="background-color:white;">
-      <center>
-        <h1 style="color:blue">MBA</h1><br>
-        ------------------------------------------------------------------------------------<br>
-      </center>
-
-      <ul>
-        <center>
-          <font color="black">
-            <h4>
-              <li>Department Profile</li>
-
-
-
-              <li>Vision</li>
-
-
-              <li>Short Term Goals</li>
-
-              <li>Strengths</li>
-
-              <li>Teaching Lerning Initiatives</li>
-
-              <li>Educational Objectives</li>
-            </h4>
-          </font>
-        </center>
-    </div>
-  </div>
-
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <footer>
-    copyright@GIET.AC.IN ALL RIGHTS RESERVED
-  </footer>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <footer>
+      copyright@GIET.AC.IN ALL RIGHTS RESERVED
+    </footer>
 
 
 </body>
